# GETMOVIN

./: .coverage  .gitignore  .gitmodules  BOOTSTRAP.md  CROSS_PLATFORM.md  DSSSL_FIX_PROMPT.md  INSTALL.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SSH_SETUP.md  bootstrap_requirements.py  coverage.xml  download_deps.py  main.py  nul  package_for_windows.py  pytest.ini  requirements.txt  run.bat  run.sh  setup.py
config/: remote_guided.yaml.example
docs/: ANTI_FORENSICS_AND_HIDDEN_STORAGE.md  Auto_Enumeration.md  Auto_Enumeration_Enhancements.md  BOOTSTRAP.md  CHANGELOG.md  CROSS_PLATFORM.md  DSSSL_Integration.md  LOLBins_Reference.md  MADCert_Integration.md  PE5_Integration.md  PE5_SYSTEM_TOKEN_INTEGRATION.md  PE5_UI_Integration.md  PROJECT_STRUCTURE.md  QUICKSTART.md  REMOTE_CONTROL_HUB.md  REMOTE_CONTROL_IMPROVEMENTS.md  SSH_COMPATIBILITY.md  SSH_USAGE.md  SYSTEM_TOKEN_PASSING.md  remote_guided_relay.md
enumeration_reports/2025-12-04/unknown_20251204_221950/: mitre_attack_flow.mmd  network_topology.mmd  privilege_escalation.mmd  system_architecture.mmd
enumeration_reports/2025-12-04/vlan_network_test_225800/: attack_timeline.mmd  lateral_movement.mmd  mitre_attack_flow.mmd  network_topology.mmd  privilege_escalation.mmd  system_architecture.mmd
enumeration_reports/20251204_235010/remote_targets/192_168_1_100_depth1/: README.md
enumeration_reports/20251204_235017/remote_targets/192_168_1_100_depth1/: README.md
enumeration_reports/20251204_235025/remote_targets/192_168_1_100_depth1/: README.md
enumeration_reports/20251204_235033/remote_targets/192_168_1_100_depth1/: README.md
enumeration_reports/20251204_235041/remote_targets/192_168_1_100_depth1/: README.md
enumeration_reports/20251204_235048/remote_targets/192_168_1_100_depth1/: README.md
enumeration_reports/20251204_235058/remote_targets/192_168_1_100_depth1/: README.md
enumeration_reports/20251204_235106/remote_targets/192_168_1_100_depth1/: README.md
enumeration_reports/20251204_235113/remote_targets/192_168_1_100_depth1/: README.md
enumeration_reports/20251204_235737/remote_targets/192_168_1_100_depth1/: README.md
enumeration_reports/20251204_235826/remote_targets/192_168_1_100_depth1/: README.md
examples/: llm_agent_example.py
modules/: __init__.py  anti_forensics.py  auto_enumerate.py  consolidation.py  credential_manager.py  credential_manager_ui.py  diagram_generator.py  discovery.py  foothold.py  hidden_vdisk.py  identity.py  lateral.py  llm_agent.py  llm_client.py  loghunter_integration.py  lolbins_reference.py  madcert_integration.py  memshadow_client.py  memshadow_protocol.py  network_visualizer.py  opsec.py  orientation.py  pe5_system_escalation.py  pe5_utils.py  proxy_chain.py  relay_client.py  remote_control_example.py  remote_hub.py  ssh_session.py  ssh_ui.py  utils.py  vlan_bypass.py
pe5_framework_extracted/pe5_framework/: CMakeLists.txt  Makefile  README.md  build.bat  build.py
pe5_framework_extracted/pe5_framework/common/: ntdefs.h  xor_crypto.c
pe5_framework_extracted/pe5_framework/pe1_loader/: c2_client.c  loader.c  loader.h  persistence.c
pe5_framework_extracted/pe5_framework/pe2_dns_tunnel/: dns_tunnel.c
pe5_framework_extracted/pe5_framework/pe3_container/: container.c
pe5_framework_extracted/pe5_framework/pe4_stub/: injector.c  stub.c  stub.h
pe5_framework_extracted/pe5_framework/pe5_exploit/: decryption.c  exploit.c  exploit.h  exploit_asm.asm  token_manipulation.c
pe5_framework_extracted/pe5_framework/tools/: encryptor.py  key_derivation.py
relay/: README.md  requirements.txt
relay/config/: relay.yaml.example
relay/scripts/: install.sh  install_dsssl.sh  setup_tor.sh  uninstall.sh
relay/src/: __init__.py  health_server.py  relay_daemon.py  tls_extensions.py
relay/systemd/: ai-relay.service
scripts/: build_dsssl.sh  get_dsssl_path.py
tests/: __init__.py  test_all_modules.py  test_all_modules_comprehensive.py  test_all_modules_direct.py  test_auto_enumerate_extensive.py  test_auto_enumerate_extensive_additional.py  test_complex_vlan_network.py  test_consolidation_comprehensive.py  test_consolidation_extensive.py  test_consolidation_methods.py  test_credential_manager.py  test_credential_manager_comprehensive.py  test_credential_manager_extensive.py  test_diagram_generator.py  test_diagram_generator_comprehensive.py  test_diagram_generator_extensive.py  test_discovery.py  test_discovery_comprehensive.py  test_discovery_extensive.py  test_foothold_comprehensive.py  test_foothold_extensive.py  test_foothold_methods.py  test_identity_comprehensive.py  test_identity_extensive.py  test_identity_methods.py  test_lateral_comprehensive.py  test_lateral_extensive.py  test_lateral_methods.py  test_llm_agent_comprehensive.py  test_llm_agent_extensive.py  test_llm_agent_extensive_additional.py  test_llm_agent_module.py  test_llm_client.py  test_llm_client_comprehensive.py  test_llm_client_extensive.py  test_loghunter_comprehensive.py  test_loghunter_extensive.py  test_loghunter_integration_extensive.py  test_lolbins_database.py  test_lolbins_extensive.py  (+37 more)
(+81 files in other folders)
